@@ -78,8 +78,12 @@ WSGI_APPLICATION = 'backend.wsgi.application'
 
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': BASE_DIR / 'db.sqlite3',
+        'ENGINE': 'django.db.backends.postgresql',
+        'NAME': 'transcend_users_db',
+        'USER': 'transcend_user',
+        'PASSWORD': 'transcend_pwd',
+        'HOST': 'db',
+        'PORT': '5432',
     }
 }
 
