@@ -16,6 +16,8 @@ services:
     # entrypoint: /app/docker/frontend/frontend.sh
     # depends_on:
     #   - backend
+
+
   backend:
     container_name: backend
     env_file:
@@ -29,3 +31,15 @@ services:
       - 8000:8000
     # restart: unless-stopped
     entrypoint: /app/docker/backend/backend.sh
+    depends_on:
+      - db
+
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_DB: transcend_users_db
+      POSTGRES_USER: transcend_user
+      POSTGRES_PASSWORD: transcend_pwd
+    ports:
+      - "5432:5432"
